--- a/index.html
+++ b/index.html
@@ -57,23 +57,55 @@
             </div>
       </div>
     </nav>
- 
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-10">
-          <div class="card1">
-            <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591 14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3 2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22 20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551 2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543 6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046 9.10457 11 8 11Z"></path></svg>
-             -->
-             <img src="img/WIN_20231016_10_46_15_Pro.jpg" alt="">
-            <div class="card__content">
-              <p class="card__title">Card Title
-              </p><p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
+    
+  <div class="cards">
+    <div class="card red">
+  <img src="img/images.jpg" alt="" width="300" height="300">
+
+
+    </div>
+    <div class="card purple">
+      <img src="img/img12.jpg" alt="" width="300" height="300">
+    </div>
+    <div class="card red1">
+      <img src="img/download (2).jpg" alt="" width="300" height="300">
+
+    </div>
+    <div class="card red2">
+      <img src="img/download (1).jpg" alt="" width="300" height="300">
+
+  </div>
+  <div class="card green">
+    <img src="img/download.jpg" alt="" width="300" height="300">    
+
+  </div>
+
+ </div>
+    <div class="cards">
+      <div class="card red">
+          <p class="tip">-1894-</p>
+          <p class="second-text"> Nicholas II became Tsar of Russia The last Tsar of Russia took over the reign of the empire after his father, Alexander III died. Nicholas was forced to abdicate in 1917 and was executed a year later along with his family.
+          </p>
+      </div>
+      <div class="card purple">
+          <p class="tip">-1911-</p>
+          <p class="second-text"> First bomb dropped from an aircraft Prior to this, bombs were dropped using unmanned balloons. The first bomb launched from an aircraft was used by the Italians in the Italo-Turkish War.</p>
+      </div>
+      <div class="card red1">
+          <p class="tip">-1952-</p>
+          <p class="second-text">First large hydrogen bomb tested by the U.S. The bomb, codenamed Mike, was part of Operation Ivy and was tested in the Eniwetok atoll in the Marshall Islands.</p>
+      </div>
+      <div class="card red2">
+        <p class="tip">-1955-</p>
+        <p class="second-text"> United Airlines Flight 629 blows up over Colorado A bomb hidden in checked luggage of United Airlines Flight 629 exploded over Longmont, Colorado killing all 44 people on board.</p>
+    </div>
+    <div class="card green">
+        <p class="tip">-1993-</p>
+        <p class="second-text"> Maastricht Treaty comes into force The Maastricht Treaty that created a common currency, the Euro, for European Union countries came into force
+        </p>
+    </div>
+  </div>
 
 
 
