--- a/index copy.html
+++ b/index copy.html
@@ -27,7 +27,7 @@
             <label class="number">r1</label>
           </div>
         </div>
-        <div class="radio-wrapper">
+        <div class="radio-wrapper" id="1911" >
           <input class="input" name="btn" id="value-2" checked="true" type="radio">
           <div class="btn">
             _1911 🦾<span aria-hidden=""></span>
@@ -35,7 +35,7 @@
             <label class="number">r2</label>
           </div>
         </div>
-        <div class="radio-wrapper">
+        <div class="radio-wrapper" id="1952">
           <input class="input" name="btn" id="value-3" type="radio">
           <div class="btn">
             _1952 🦾<span aria-hidden=""></span>
@@ -43,7 +43,7 @@
             <label class="number">r3</label>
           </div>
         </div>
-        <div class="radio-wrapper">
+        <div class="radio-wrapper" id="1955">
           <input class="input" name="btn" id="value-1" type="radio">
           <div class="btn">
             <span aria-hidden=""></span>_1955 🦾
@@ -51,7 +51,7 @@
             <label class="number">r4</label>
           </div>
         </div>
-        <div class="radio-wrapper">
+        <div class="radio-wrapper" id="1993">
           <input class="input" name="btn" id="value-3" type="radio">
           <div class="btn">
             _1993 🦾<span aria-hidden=""></span>
@@ -61,28 +61,6 @@
         </div>
       </div>
   </nav>
-
-
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-6">
-        <div class="cards">
-          <div class="card red">
-            <img class="image" src="img/images.jpg" alt="">
-          </div>
-          <div class="card red">
-            <p class="tip">-1894-</p>
-            <p class="second-text"> Nicholas II became Tsar of Russia The last Tsar of Russia took over the reign of the
-              empire after his father, Alexander III died. Nicholas was forced to abdicate in 1917 and was executed a
-              year
-              later along with his family.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 
 
 
